c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/complement_pointer.c
/* It's illegal to take the bitwise complement of a pointer. */
int main(void) {
    int *x = 0;
    return (int) ~x;
}